--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -25,7 +25,7 @@
 .conteinerHeader {
     display: flex;
     flex-direction: column;
-    margin-top: 6rem;
+    margin-top: 3rem;
     width: 100%;
     height: 100%;
     
@@ -42,6 +42,8 @@ font-family: Gilory Bold;
 color: white;
 font-size: 30px;
 padding-left: 10%;
+padding-top: 2%;
+padding-bottom: 2%;
 
 }
 
@@ -75,16 +77,15 @@ padding-left: 10%;
 
 .conteinerBody21 {
     padding-top:  100px ;
-    width: 50%;
     height: 100%vh; 
     padding-left: 10%;
 
 }
-
 .conteinerBody22 {
-    width: 70%;
-    height: 100%vh; 
+    width: 100%;
+    max-height: 720px; 
 }
+
 .imagenHome{
     display: flex;
     width: 100%;
@@ -103,7 +104,7 @@ padding-left: 10%;
     
 }
 .conteinerBody4 {
-    
+    padding-top: 5%;
     
 }
 
@@ -251,7 +252,11 @@ padding-left: 10%;
         height: 30vh; 
         
     }
- 
+    .conteinerBody4 {
+        padding-top: 0;
+        
+    }
+    
 
 
 
