--- a/src/components/calculator/calculator.css
+++ b/src/components/calculator/calculator.css
@@ -37,3 +37,18 @@
     font-family: 'Poppins', sans-serif;
     font-size: 40px;
   }
+
+  @media (max-width: 800px) {
+   
+    .calculatorInput {
+      width: 150px; 
+      height: 50px; 
+      text-align: center; 
+      margin-bottom: 10px; 
+      border: 1px solid #ccc; 
+      border-radius: 20px; 
+      font-size: 20px; 
+    }
+
+
+}
