--- a/src/components/Card/cardHome.css
+++ b/src/components/Card/cardHome.css
@@ -46,6 +46,9 @@
     .cardHome {
         margin: 10px;
     }
+    .cardTextHome {
+        font-size: 8px;
+    }
 }
 @media (max-width: 500px) {
     
@@ -54,5 +57,8 @@
     }
     .containerCards {
         width: 100%;
+    }
+    .cardTextHome {
+        font-size: 5px;
     }
 }
