--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -71,7 +71,7 @@ padding-bottom: 2%;
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 60vh;
+    
    
 
 }
@@ -80,13 +80,17 @@ padding-bottom: 2%;
     padding-top:  100px ;
     height: 100%vh; 
     padding-left: 10%;
+    
 
 }
+
 .conteinerBody22 {
+    max-width: 1250px;
+    max-height: 718px;
     width: 100%;
-    max-height: 720px; 
+    height: auto;
+    overflow: hidden; /* Evita que la imagen se salga del contenedor */
 }
-
 .imagenHome{
     display: flex;
     width: 100%;
@@ -96,7 +100,7 @@ padding-bottom: 2%;
     display: flex;
     width: auto;
     height: 350px;
-    background-image: url('./assests/reseña1.jpg'); 
+    background-image: url('./assests/reseña1.png'); 
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
@@ -209,7 +213,9 @@ padding-bottom: 2%;
 
 }
 
+@media (max-width: 1000px) {
 
+}
 
 @media (max-width: 800px) {
     .conteinerHeader {
@@ -226,26 +232,28 @@ padding-bottom: 2%;
 
 
     /*Slioder*/
-    .imagenHome{
-        display: flex;
-        height: 100%;
-    }
+ 
     .conteinerBody2 {
         display: flex;
         flex-direction: column;
         margin-bottom: 200px;
     }
+
     .conteinerBody21 {
         padding-top: 10px;
         padding-bottom: 10px;
         width: 100%;
         height: 50vh; 
     }
-    
-    .conteinerBody22 {
+    .conteinerBody22{
+        max-width: 1250px;
+        max-height: 2000px;
         width: 100%;
-        height: 50vh; 
+        height: auto;
+        overflow: none;
     }
+    
+
     
     
 
