--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -113,11 +113,13 @@
 }
 
 
-.texSlider{
+.texSlider {
     font-family: Gilory Bold;
     color: #fd5000;
     font-size: 30px;
-    margin-right: 10px; 
+    margin-top: 10px;
+    letter-spacing: 3px;
+    
 }
 
 
@@ -148,70 +150,6 @@
 
 
 
-
-
-/*Footer*/
-
-.conteinerFooter {
-    flex: 1; 
-    background-color: black; 
-    display: flex;
-    flex-direction: column;
-    justify-content: center; 
-    align-items: center; 
-}
-
-
-.footerSocial {
-    display: flex;
-    flex-direction: row;
-    align-items: center; 
-}
-
-.footerSocialTitle {
-    font-family: Gilory Bold;
-    color: #ff5000;
-    font-size: 30px;
-    margin-right: 10px; 
-}
-
-.footerLinks {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center; 
-}
-
-.Links {
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    text-align: center; 
-    padding: 20px;
-}
-.footerTex {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center; 
-
-}
-.footerTex1{
-    color: white;
-    padding: 20px;
-    font-size: 10px;
-    font-family: Gilory Medium;
-    text-decoration: overline ;
-
-}
-.footerTex2{
-    color: white;
-    padding: 20px;
-    font-size: 10px;
-    font-family: Gilory Medium;
-
-}
 
 
 
@@ -266,31 +204,6 @@
 
     /*Footer*/
 
-    .footerSocial {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .footerSocialTitle {
-        margin-right: 0; 
-    }
-
-    .footerLinks {
-        flex-direction: column;
-    }
-
-    .Links {
-        padding: 10px;
-    }
-
-    .footerTex {
-        flex-direction: column;
-    }
-    
-    .footerTex1,
-    .footerTex2 {
-        padding: 10px;
-    }
 }
 
 @media (max-width: 400px) {
