--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -114,6 +114,9 @@
     .Form {
         flex-direction: column; /* Cambia la dirección de los elementos a columna */
     }
+    .myButtonFooter {
+        font-size: 15px;
+    }
     .FormText {
         width: auto;
         height: auto;
@@ -142,4 +145,9 @@
         font-size: 10px;
     }
 
+}
+@media (max-width: 500px) {
+    .myButtonFooter {
+        font-size: 10px;
+    }
 }
