--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -125,7 +125,7 @@ padding-bottom: 2%;
 
 .conteinerBody31{
     width: 50%;
-    height: 100vh; 
+     
     
 }
 
@@ -165,6 +165,7 @@ padding-bottom: 2%;
 }
 
 @media (max-width: 800px) {
+
     .conteinerHeader {
      
         width: 100%;
@@ -183,14 +184,12 @@ padding-bottom: 2%;
     .conteinerBody2 {
         display: flex;
         flex-direction: column;
-        margin-bottom: 200px;
+        
     }
 
     .conteinerBody21 {
-        padding-top: 10px;
-        padding-bottom: 10px;
         width: 100%;
-        height: 50vh; 
+        padding-top: 10px;
     }
     .conteinerBody22{
         max-width: 1250px;
@@ -199,10 +198,6 @@ padding-bottom: 2%;
         height: auto;
         overflow: none;
     }
-    
-
-    
-    
 
     .conteinerBody31{
         width: 50%;
@@ -220,7 +215,9 @@ padding-bottom: 2%;
 
 
 @media (max-width: 500px) {
-
+    .conteinerBody21{
+        padding-top: 2px;
+    }
     .conteinerBody31{
         width: 50%;
         height: 10vh; 
